# gst-mmal-src

./: AUTHORS  CMakeLists.txt  README.md
cmake/: PkgCheckVariable.cmake
gstplugins/: gstmmalsrc.c  gstmmalsrc.h
scripts/: build_gstreamer.sh  env.sh  install_prereq.sh
